# easy_mem

./: .gitignore  README.md  main.py  pyproject.toml  readme_mem0.md  requirements.txt  run_envs.sh  test.ipynb  test.py
script/: 00_preprocess_data.sh  0_run_embedding.sh  0_run_embedding_ppu.sh  0_run_model.sh  0_run_model_ppu.sh  1_generate.sh  1_generate_mem_alpha_del_compare.sh  1_generate_mem_alpha_del_compare_hotpotqa_dev.sh  1_generate_mem_alpha_del_compare_locomo.sh  2_evaluate.sh  2_evaluate_lme.sh  2_evaluate_open.sh  3_kill_vllm_in_time.sh  exp_delete_mem0_del_compare.sh  fix_locomo_jsonl_gold_answers.py  mem0_trace_memop_stats.py
src/: 00_preprocess_data.py  1_run_generation.py  2_evaluate_qa.py  9_run_generation.py  common_utils.py  pipeline_evaluate.py  pipeline_evaluate_f1.py  pipeline_generate.py
src/LME/: evaluate_qa.py
src/agent/: __init__.py  base.py  standard_agent.py
src/benchmark/: __init__.py  base.py  event_bench.py  lme.py  locomo.py
src/generate/: load_api_llm.py  load_api_llm_azure.py  openai_chat_batch.py  openai_chat_batch_azure.py
src/memory/: MemorySystem.py  __init__.py  base.py  tracing.py
src/memory/amem/: prompt.py  (+3 more)
src/prompts/: __init__.py  loader.py
src/utils/: __init__.py  common_utils.py  date_utils.py  embed_utils.py  env.py  eval_report.py  llm_api.py  openai_client.py  qa_metrics.py
test/: conftest.py  test_eval_report.py  test_pipeline_utils.py  test_qa_metrics.py
test/agent/: test_standard_agent.py
test/benchmark/: test_benchmark.py  test_benchmark_loaders.py
test/e2e/: test_amem.py  test_rag.py
test/memory/: test_local_faiss.py  test_memory_systems.py
(+58 files in other folders)
