[project]
name = "easy-mem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "pydantic>=2.9.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.1.1",
    "transformers<5",
    "vllm==0.11.0",
    "jinja2>=3.1.0",
    "openai>=1.0.0",
    "tqdm>=4.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
