[project]
name = "easy-mem"
version = "0.1.0"
description = "Unified benchmark pipeline for comparing long-context memory methods (RAG, Mem0, AMem, etc.)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rank-bm25>=0.2.2",
    "tiktoken>=0.7.0",
    "faiss-cpu>=1.13.2",
    "pydantic>=2.9.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.1.1",
    "transformers>=4.45.2",
    "vllm>=0.17.0",
    "jinja2>=3.1.0",
    "openai>=1.0.0",
    "tqdm>=4.0.0",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
